# student-work

./: .gitmodules  README.md
ANIM3D/project/: CMakeLists.txt
ANIM3D/project/src/: main.cpp  scene.cpp  scene.hpp
ANIM3D/project/src/simulation/: simulation.cpp  simulation.hpp
ERO2/: .flake8  Makefile  README.md  authors.txt  requirements.txt
ERO2/config/: ING_PREPAS.json  all.json  base_configs.json  config.json  piscine_split.json  sql_split.json
ERO2/css/: styles.css
ERO2/src/: config_loader.py  consts.py  display.py  entities.py  enums.py  history.py  main.py  metrics.py  models_task.py  plot.py  population.py  simulation.py  simulation_runner.py  study.py  task.py  tools.py  user.py
IREN/: 72-navires-24-fait-main.ipynb  README.md
IRGPUA/: project_irgpua.ipynb
IRGPUA/project_irgpua/: .gitignore  CMakeLists.txt
IRGPUA/project_irgpua/src/: fix_gpu.cu  fix_gpu.cuh  fix_gpu_inc.cu  fix_gpu_inc.cuh  main.cu
IRGPUA/project_irgpua/src/utils/: histo_gpu.cu  histo_gpu.cuh  reduce_gpu.cu  reduce_gpu.cuh  scan_gpu.cu  scan_gpu.cuh
ISIM/: .gitignore  CMakeLists.txt  README.md  input.JSON
ISIM/src/: main.cc
ISIM/src/utility/: jsoncheck.cc  jsoncheck.hh
ISIM/src/utility/texture/: BrickParam.cc  BrickParam.hh  ClaireParam.cc  ClaireParam.hh  GradientParam.cc  GradientParam.hh  Param.hh  PerlinParam.cc  PerlinParam.hh  Size.cc  Size.hh  Space.cc  Space.hh  Texture.cc  Texture.hh  VoronoiParam.cc  VoronoiParam.hh
POGLA/: CMakeLists.txt  fragment.frag  fragment_bunny.frag  geometry.geom  main.cpp  vertex.vert  vertex_bunny.vert
TIFO/: .gitignore
TIFO/src/: image.py  main.py  utils.py
